[package]
name = "wolrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = ">=1.1.1,<2.0.0"
rocket = { version = ">=0.4.10,<5.0.0", optional = true }
clap = { version = "3.0.0-beta.5", optional = true }

[features]
default = [ "server", "cli" ]
server = ["rocket"]
cli = ["clap"]
